# 20191-software-economics-version2

./: Cargo.toml  Makefile
src/: computation.rs  input.rs  main.rs  mrgame.rs  newton.rs  relation.rs  rrgame.rs  solver.rs
src/computation/: comp_mrgame.rs
src/solver/: solver_mrgame.rs
