[package]
name = "software_economics"
version = "0.1.0"
authors = ["QuangTung97 <quangtung29121997@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
assert_approx_eq = "1.1.0"
ndarray = "0.13"
ndarray-linalg = { version = "0.12", features = ["openblas"] }
rand = "0.7.2"
